removed .env info

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-NEXT_PUBLIC_BASE_URL="https://nextts-api.vercel.app"
+NEXT_PUBLIC_BASE_URL=""
 
-DATABASE_URL="mongodb+srv://ndagiabubakar4:gjNL1kCkA6NFj0tk@cluster0.zu8ou.mongodb.net/NextJS-Api?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL=""
